RESOLVED FIXED86532
r117147 causes a null-deref crash in DOMImplementation::createDocument()
https://bugs.webkit.org/show_bug.cgi?id=86532
Summary r117147 causes a null-deref crash in DOMImplementation::createDocument()
Jer Noble
Reported 2012-05-15 14:37:11 PDT
r117147 causes a null-deref crash in DOMImplementation::createDocument()
Attachments
Patch (1.84 KB, patch)
2012-05-15 14:39 PDT, Jer Noble
jamesr: review+
Jer Noble
Comment 1 2012-05-15 14:39:05 PDT
Jer Noble
Comment 2 2012-05-15 14:42:32 PDT
Note You need to log in before you can comment on or make changes to this bug.