r117147 causes a null-deref crash in DOMImplementation::createDocument() https://bugs.webkit.org/show_bug.cgi?id=86532

Reviewed by James Robinson.

No new tests, but fixes many crashing tests.

Protect against the possibility of being passed a NULL frame in
DOMImplementation::createDocument().

* dom/DOMImplementation.cpp:
(WebCore::DOMImplementation::createDocument):

Canonical link: https://commits.webkit.org/104109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117165 268f45cc-cd09-0410-ab3c-d52691b4dbfc